#46 start files into src tree